--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -60,6 +60,7 @@ POST_UNINSTALL = :
 CATALOGS = @CATALOGS@
 CATOBJEXT = @CATOBJEXT@
 CC = @CC@
+CPP = @CPP@
 DATADIRNAME = @DATADIRNAME@
 GENCAT = @GENCAT@
 GMOFILES = @GMOFILES@
