--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,10 @@
 ## Process this file with automake to produce Makefile.in
 AUTOMAKE_OPTIONS = gnu 1.3
 
-SUBDIRS = doc lib po intl src
+SUBDIRS = doc lib po intl src m4
+
+# Remove this file here (it is created via configure), not from within intl.
+DISTCLEANFILES = intl/libintl.h
 
 EXTRA_DIST = oleobug.in
 
