--- a/Makefile.in
+++ b/Makefile.in
@@ -93,7 +93,10 @@ l = @l@
 
 AUTOMAKE_OPTIONS = gnu 1.3
 
-SUBDIRS = doc lib po intl src
+SUBDIRS = doc lib po intl src m4
+
+# Remove this file here (it is created via configure), not from within intl.
+DISTCLEANFILES = intl/libintl.h
 
 EXTRA_DIST = oleobug.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
