--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -98,8 +98,8 @@ bin_PROGRAMS = oleo
 oleo_SOURCES = parse.y byte-compile.c eval.c ref.c \
  decompile.c sort.c regions.c utils.c lists.c\
  io-term.c io-utils.c io-x11.c window.c io-edit.c\
- hash.c panic.c line.c key.c format.c funcs.c \
- ir.c io-curses.c font.c display.c print.c init.c \
+ panic.c line.c key.c format.c funcs.c \
+ hash.c ir.c io-curses.c font.c display.c print.c init.c \
  sylk.c oleofile.c sc.c list.c busi.c string.c cells.c \
  cmd.c basic.c args.c io-gtk.c \
  stub.c input.c info.c help.c graph.c forminfo.c \
@@ -113,7 +113,11 @@ noinst_HEADERS = args.h basic.h byte-compile.h cell.h cmd.h decompile.h \
  panic.h parse.h print.h proto.h ref.h regions.h sc.h stub.h stubs.h sylk.h \
  sysdef.h utils.h window.h list.h ir.h io-gtk.h sort.h
 
-oleo_LDADD = @INTLLIBS@ ../lib/liboleo.a
+oleo_LDADD = @INTLLIBS@ @GTK_LIBS@ ../lib/liboleo.a
+
+INCLUDES = -I.. -I$(srcdir) -I$(srcdir) -I$(top_srcdir)/lib -I../intl
+
+CFLAGS = @CFLAGS@ @GTK_CFLAGS@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../config.h
 CONFIG_CLEAN_FILES = 
@@ -131,8 +135,8 @@ X_PRE_LIBS = @X_PRE_LIBS@
 ANSI2KNR = ../lib/ansi2knr
 oleo_OBJECTS =  parse$U.o byte-compile$U.o eval$U.o ref$U.o \
 decompile$U.o sort$U.o regions$U.o utils$U.o lists$U.o io-term$U.o \
-io-utils$U.o io-x11$U.o window$U.o io-edit$U.o hash$U.o panic$U.o \
-line$U.o key$U.o format$U.o funcs$U.o ir$U.o io-curses$U.o font$U.o \
+io-utils$U.o io-x11$U.o window$U.o io-edit$U.o panic$U.o line$U.o \
+key$U.o format$U.o funcs$U.o hash$U.o ir$U.o io-curses$U.o font$U.o \
 display$U.o print$U.o init$U.o sylk$U.o oleofile$U.o sc$U.o list$U.o \
 busi$U.o string$U.o cells$U.o cmd$U.o basic$U.o args$U.o io-gtk$U.o \
 stub$U.o input$U.o info$U.o help$U.o graph$U.o forminfo$U.o posixtm$U.o \
@@ -140,7 +144,6 @@ date$U.o xrdb$U.o
 oleo_DEPENDENCIES =  ../lib/liboleo.a
 oleo_LDFLAGS = 
 YLWRAP = $(srcdir)/ylwrap
-CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
 LINK = $(CC) $(CFLAGS) $(LDFLAGS) -o $@
 HEADERS =  $(noinst_HEADERS)
