--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,3 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 info_TEXINFOS = oleo.texi
-
+noinst_DATA =	basics.texi bugs.texi cell-refs.texi entering-data.texi \
+		expressions.texi functions.texi interface.texi keymaps.texi \
+		macros.texi making-changes.texi options.texi print-plot.texi \
+		programs.texi ranlib.texi style.texi texinfo.tex windows.texi \
+		oleo.html
