--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,3 +1,3 @@
 ## Process this file with automake to produce Makefile.in -*- Makefile -*-
 
-EXTRA_DIST = gettext.m4 gtk.m4 lcmessage.m4 progtest.m4
+EXTRA_DIST = gettext.m4 gtk.m4 lcmessage.m4 progtest.m4 motif.m4
