--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -4,17 +4,16 @@ info_TEXINFOS = oleo.texi
 TEXIS=		basics.texi bugs.texi cell-refs.texi entering-data.texi \
 		expressions.texi functions.texi interface.texi keymaps.texi \
 		macros.texi making-changes.texi options.texi print-plot.texi \
-		programs.texi ranlib.texi style.texi texinfo.tex windows.texi
-
-#		motif.texi
+		programs.texi ranlib.texi style.texi texinfo.tex windows.texi \
+		motif.texi
 
 EXTRA_DIST=	$(TEXIS)
-noinst_DATA =	oleo.html $(TEXIS)
+noinst_DATA =	oleo_web.html $(TEXIS)
 
 oleo.info:	oleo.texi $(TEXIS)
 
 htmldir=	$(prefix)/Oleo/html
 html_DATA=	oleo.html
 
-oleo.html:	oleo.texi ${TEXIS}
-		texi2html oleo.texi
+oleo.html:	$(srcdir)/oleo.texi ${TEXIS}
+		texi2html $(srcdir)/oleo.texi
