--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,3 +1,6 @@
-## Process this file with automake to produce Makefile.in -*- Makefile -*-
-
+#
+# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.3 1998/08/27 21:15:28 danny Exp $
+#
+# Process this file with automake to produce Makefile.in -*- Makefile -*-
+#
 EXTRA_DIST = gettext.m4 gtk.m4 lcmessage.m4 progtest.m4 motif.m4
