i18n now works for me. Put the stuff needed for help in. Searching for an anchor in XmHTML 	doesn't seem to work. Need to look into this.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,8 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/src/Makefile.am,v 1.18 1998/08/27 21:15:36 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/src/Makefile.am,v 1.19 1998/08/29 23:59:15 danny Exp $
 #
+localedir = $(prefix)/share/locale
+
 AUTOMAKE_OPTIONS = ../lib/ansi2knr dejagnu
 
 bin_PROGRAMS = oleo
