--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,6 +1,9 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.3 1998/08/27 21:15:28 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/m4/Makefile.am,v 1.4 1998/09/02 22:42:38 danny Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
-EXTRA_DIST = gettext.m4 gtk.m4 lcmessage.m4 progtest.m4 motif.m4
+#EXTRA_DIST = gettext.m4 gtk.m4 lcmessage.m4 progtest.m4 \
+#		motif.m4 sciplot.m4 xmhtml.m4 xbae.m4
+#
+EXTRA_DIST = gtk.m4 motif.m4 sciplot.m4 xmhtml.m4 xbae.m4
