--- a/Makefile.am
+++ b/Makefile.am
@@ -3,12 +3,12 @@
 #
 # Process this file with automake to produce Makefile.in
 #
-# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.16 1998/08/27 21:15:24 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/Makefile.am,v 1.17 1998/09/02 22:42:36 danny Exp $
 #
 AUTOMAKE_OPTIONS = gnu 1.3
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = doc lib intl src m4 po
+SUBDIRS = doc lib intl src m4 po Xresources
 
 # Remove this file here (it is created via configure), not from within intl.
 DISTCLEANFILES = intl/libintl.h
