--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl This is the configuration file for GNU oleo.
-dnl $Id: configure.in,v 1.24 1998/09/02 22:42:37 danny Exp $
+dnl $Id: configure.in,v 1.25 1998/09/16 20:55:59 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -124,6 +124,7 @@ dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/time.h unistd.h)
+AC_CHECK_HEADERS(locale.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
