--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,5 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/doc/Makefile.am,v 1.6 1998/09/02 22:42:34 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/doc/Makefile.am,v 1.7 1998/10/07 20:14:26 danny Exp $
 #
 # Process this file with automake to produce Makefile.in
 #
@@ -16,8 +16,12 @@ noinst_DATA =	oleo_web.html $(TEXIS)
 
 oleo.info:	oleo.texi $(TEXIS)
 
+if HaveTexi2Html
+
 htmldir=	$(prefix)/share/oleo
 html_DATA=	oleo.html
 
 oleo.html:	$(srcdir)/oleo.texi ${TEXIS}
 		texi2html $(srcdir)/oleo.texi
+
+endif
