--- a/configure.in
+++ b/configure.in
@@ -1,12 +1,12 @@
 dnl
 dnl This is the configuration file for GNU oleo.
-dnl $Id: configure.in,v 1.33 1999/01/02 08:50:53 danny Exp $
+dnl $Id: configure.in,v 1.34 1999/01/21 23:28:03 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 AC_INIT(src/init.c)
 
-AM_INIT_AUTOMAKE([oleo], [1.6.13])
+AM_INIT_AUTOMAKE([oleo], [1.6.14])
 GNU_PACKAGE="GNU $PACKAGE"
 AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")
 
@@ -14,7 +14,7 @@ dnl
 dnl Use of this macro will keep unexpected things from happening if
 dnl you're not familiar with automake.
 dnl
-AM_MAINTAINER_MODE
+dnl AM_MAINTAINER_MODE
 
 dnl Define available languages
 ALL_LINGUAS="en nl fr"
@@ -22,13 +22,19 @@ ALL_LINGUAS="en nl fr"
 AC_ARG_PROGRAM
 AM_CONFIG_HEADER(config.h)
 
-dnl Detect Cygwin32 environment
-AM_CYGWIN32
+dnl
+dnl Detect strange environments
+dnl	This needs to be just about the first thing done.
+dnl
+AC_AIX
+AC_ISC_POSIX
+AC_CYGWIN
+AM_EMX
 
 dnl Checks for programs.
 AC_PROG_YACC
 AC_PROG_CC
-AM_PROG_INSTALL
+AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_RANLIB
 
@@ -47,11 +53,13 @@ AC_CHECK_LIB(ncurses, waddch, ,
 dnl This library is required on FreeBSD.
 AC_CHECK_LIB(mytinfo, tputs)
 
-dnl Check whether a recent version of GNU PlotUtils is around
-AC_CHECK_LIB(plot, openpl)
-
+dnl
 dnl Check existence of a working math library
-AC_CHECK_LIB(m, sqrtf)
+dnl	The good old check with sqrtf fails on some systems.
+dnl	Is there a function that works on all ?
+dnl	Yes: "main" just detects presence of the library.
+dnl
+AC_CHECK_LIB(m, main)
 
 dnl Checks for X11
 AC_PATH_XTRA
@@ -88,6 +96,14 @@ dnl which files to compile.
 dnl
 AM_CONDITIONAL(UseMotif, test x$with_motif = xyes)
 
+dnl
+dnl Check whether a recent version of GNU PlotUtils is around
+dnl	This needs to be done after the X and Motif tests, because
+dnl	the libplot from GNU plotutils sometimes requires linking the
+dnl	X and Motif libraries
+dnl
+AC_CHECK_LIB(plot, openpl)
+
 dnl Checks for Guile
 dnl AC_CHECK_LIB(guile, scm_boot_guile)
 
@@ -110,22 +126,6 @@ if test $with_debug = yes; then
   fi
 fi
            
-if test $with_motif = no; then
-dnl Checks for GTK
-AC_ARG_WITH(gtk,
-[  --without-gtk		  Do not use GTK, even if detected],
-[		case "${withval}" in
-		  y | ye | yes )	usegtk=yes ;;
-		  n | no )		usegtk=no ;;
-		  * )			usegtk=yes ;;
-		esac],
-[		with_gtk=yes])
-
-if test $with_gtk = yes; then
-AM_PATH_GTK(1.0.0, AC_DEFINE(HAVE_LIBGTK))
-fi
-fi
-
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
