Add to the build

--- a/config.h.in
+++ b/config.h.in
@@ -101,6 +101,8 @@
 #undef HAVE_SciPlot_H
 #undef HAVE_XmHTML_H
 #undef HAVE_Xbae
+#undef HAVE_XLT
+#undef USE_XBASE
 
 #if ENABLE_NLS
 # include <libintl.h>
