--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl This is the configuration file for GNU oleo.
-dnl $Id: configure.in,v 1.34 1999/01/21 23:28:03 danny Exp $
+dnl $Id: configure.in,v 1.35 1999/01/23 10:14:46 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -82,11 +82,18 @@ dnl
 dnl Checks for Motif
 dnl These should not happen if --without-motif has been used.
 dnl
-if test $with_motif = yes; then
+if test "$with_motif" = "yes"; then
   AC_FIND_MOTIF
   ICE_FIND_Xbae
   ICE_FIND_XmHTML
-  ICE_FIND_SciPlot
+  AC_FIND_XLT
+  if test "$have_xlt" = "yes"; then
+    CFLAGS="$XLT_CFLAGS $CFLAGS"
+    LIBS="$XLT_LIBS $LIBS"
+    AC_DEFINE(HAVE_SciPlot_H)
+  else
+    ICE_FIND_SciPlot
+  fi
 fi
 
 dnl
