--- a/Makefile.in
+++ b/Makefile.in
@@ -15,7 +15,7 @@
 #
 # Process this file with automake to produce Makefile.in
 #
-# $Header: /home/matt/cvs/oleo/oleo/Attic/Makefile.in,v 1.22 1999/01/21 23:27:59 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/Attic/Makefile.in,v 1.23 1999/01/23 10:14:39 danny Exp $
 #
 
 
@@ -95,6 +95,8 @@ U = @U@
 USE_INCLUDED_LIBINTL = @USE_INCLUDED_LIBINTL@
 USE_NLS = @USE_NLS@
 VERSION = @VERSION@
+XLT_CFLAGS = @XLT_CFLAGS@
+XLT_LIBS = @XLT_LIBS@
 YACC = @YACC@
 include_motif = @include_motif@
 include_sciplot = @include_sciplot@
@@ -140,7 +142,7 @@ Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status
 
 $(ACLOCAL_M4):  configure.in  m4/emx.m4 m4/gettext.m4 m4/gtk.m4 \
 		m4/lcmessage.m4 m4/motif.m4 m4/progtest.m4 \
-		m4/sciplot.m4 m4/xbae.m4 m4/xmhtml.m4
+		m4/sciplot.m4 m4/xbae.m4 m4/xlt.m4 m4/xmhtml.m4
 	cd $(srcdir) && $(ACLOCAL) $(ACLOCAL_AMFLAGS)
 
 config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
