--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -11,7 +11,7 @@
 # PARTICULAR PURPOSE.
 
 #
-# $Header: /home/matt/cvs/oleo/oleo/lib/Attic/Makefile.in,v 1.8 1999/01/21 23:28:12 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/lib/Attic/Makefile.in,v 1.9 1999/01/23 10:14:57 danny Exp $
 #
 # Process this file with automake to produce Makefile.in
 #
@@ -93,6 +93,8 @@ U = @U@
 USE_INCLUDED_LIBINTL = @USE_INCLUDED_LIBINTL@
 USE_NLS = @USE_NLS@
 VERSION = @VERSION@
+XLT_CFLAGS = @XLT_CFLAGS@
+XLT_LIBS = @XLT_LIBS@
 YACC = @YACC@
 include_motif = @include_motif@
 include_sciplot = @include_sciplot@
