--- a/m4/Makefile.in
+++ b/m4/Makefile.in
@@ -11,7 +11,7 @@
 # PARTICULAR PURPOSE.
 
 #
-# $Header: /home/matt/cvs/oleo/oleo/m4/Attic/Makefile.in,v 1.2 1999/01/21 23:28:14 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/m4/Attic/Makefile.in,v 1.3 1999/01/23 10:14:58 danny Exp $
 #
 # Process this file with automake to produce Makefile.in -*- Makefile -*-
 #
@@ -96,6 +96,8 @@ U = @U@
 USE_INCLUDED_LIBINTL = @USE_INCLUDED_LIBINTL@
 USE_NLS = @USE_NLS@
 VERSION = @VERSION@
+XLT_CFLAGS = @XLT_CFLAGS@
+XLT_LIBS = @XLT_LIBS@
 YACC = @YACC@
 include_motif = @include_motif@
 include_sciplot = @include_sciplot@
