--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl This is the configuration file for GNU oleo.
-dnl $Id: configure.in,v 1.35 1999/01/23 10:14:46 danny Exp $
+dnl $Id: configure.in,v 1.36 1999/01/27 20:32:51 danny Exp $
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -23,6 +23,11 @@ AC_ARG_PROGRAM
 AM_CONFIG_HEADER(config.h)
 
 dnl
+dnl Find a C compiler before even detecting systems
+dnl
+AC_PROG_CC
+
+dnl
 dnl Detect strange environments
 dnl	This needs to be just about the first thing done.
 dnl
@@ -31,9 +36,10 @@ AC_ISC_POSIX
 AC_CYGWIN
 AM_EMX
 
-dnl Checks for programs.
+dnl
+dnl Now at last we can do checks for programs.
+dnl
 AC_PROG_YACC
-AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_RANLIB
@@ -41,7 +47,9 @@ AC_PROG_RANLIB
 AC_CHECK_PROG(HAVE_TEXI2HTML, texi2html, yes)
 AM_CONDITIONAL(HaveTexi2Html, test x$HAVE_TEXI2HTML = xyes)
 
-dnl Checks the Compiler.
+dnl
+dnl How good is the C compiler ?
+dnl
 AM_C_PROTOTYPES
 
 dnl Checks for libraries.
