--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,5 @@
 #
-# $Header: /home/matt/cvs/oleo/oleo/lib/Makefile.am,v 1.8 1999/01/27 20:32:52 danny Exp $
+# $Header: /home/matt/cvs/oleo/oleo/lib/Makefile.am,v 1.9 1999/01/27 23:23:42 danny Exp $
 #
 # Process this file with automake to produce Makefile.in
 #
@@ -9,7 +9,7 @@ noinst_LIBRARIES = liboleo.a
 #	random.c
 #noinst_HEADERS = getopt.h error.h get_date.h obstack.h mktime.c obstack.c 
 
-liboleo_a_SOURCES = getdate.y getopt.c getopt1.c xmalloc.c random.c
+liboleo_a_SOURCES = getdate.y getopt.c getopt1.c random.c
 
 noinst_HEADERS = getopt.h get_date.h obstack.h mktime.c obstack.c 
 
